[tool.poetry]
name = "pympacket"
version = "0.1.0"
description = ""
authors = ["Francesco Maggio <francescomaggio04@outlook.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
impacket = "^0.12.0"
pydantic = "^2.10.4"
pycryptodome = "^3.21.0"
lsassy = "^3.1.12"

[tool.poetry.scripts]
pympacket = "pympacket.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
